# social-signal

./: .env.example  .gitignore  pyproject.toml
data/: classifier_schema_1.json  dashboard_data.json  seed_terms.yaml
docs/: classifier_prompt.md  dashboard.html  extraction_prompt.md  methodology.md
scripts/: build_dashboard.py  dashboard_template.html  run_classify.py  run_extract.py  run_scrape.py
src/: classifier.py  cleaner.py  config.py  db.py  dedup.py  extractor.py  models.py  scraper.py
tests/: test_classifier.py  test_cleaner.py  test_dedup.py  test_scraper.py
